fix: Disable auto-release workflow on working branch
- Remove charts-for-ai-demo-apps from chart-release workflow triggers
- Prevents conflicting release branch creation during development
- Auto-release will still work when changes are merged to main
- Allows clean PR workflow without CI conflicts

Authored by: Wiredquill

--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -7,7 +7,8 @@ on:
       - 'charts/*/values.yaml'
     branches:
       - main
-      - charts-for-ai-demo-apps
+      # Disabled on working branch to prevent conflicts
+      # - charts-for-ai-demo-apps
   workflow_dispatch:
     inputs:
       chart_name:
