feat: Clean up Helm repository with synchronized chart versions
- Remove all old chart versions, keeping only current releases
- AI Compare charts synchronized at version 0.1.356
- SUSE AI HR Assistant at version 0.2.16
- Fixed maintainer email references for company policy compliance
- Generated clean index.yaml with 4 current charts only

Signed-off-by: wiredquill <wiredquill@users.noreply.github.com>

--- a/charts/ai-compare-opentelemetry/Chart.yaml
+++ b/charts/ai-compare-opentelemetry/Chart.yaml
@@ -22,7 +22,7 @@ sources:
   - https://github.com/wiredquill/ai-demos
 maintainers:
   - name: AI Compare OpenTelemetry Team
-    email: noreply@anthropic.com
+    email: noreply@example.com
 annotations:
   category: AI/ML
   licenses: MIT
